--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -10,7 +10,7 @@
     "com.unity.feature.ar": "1.0.1",
     "com.unity.feature.development": "1.0.1",
     "com.unity.ide.rider": "3.0.24",
-    "com.unity.ide.visualstudio": "2.0.18",
+    "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.learn.iet-framework": "3.1.3",
     "com.unity.purchasing": "4.9.3",
@@ -19,6 +19,8 @@
     "com.unity.timeline": "1.7.5",
     "com.unity.ugui": "1.0.0",
     "com.unity.visualscripting": "1.9.0",
+    "com.unity.xr.arcore": "5.0.7",
+    "com.unity.xr.arkit": "5.0.7",
     "com.unity.xr.legacyinputhelpers": "2.1.10",
     "com.unity.xr.management": "4.3.3",
     "com.unity.modules.ai": "1.0.0",
